--- a/projects2/random/random.html
+++ b/projects2/random/random.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <button id="button" class="orange">GENERATE RANDOM UNIQUE NUMBER</button>        
+        <button id="button" class="orange">GENERATE RANDOM NUMBER</button>        
         <div id="result"></div>
     </div>
 </body>
