--- a/projects2/random/random.html
+++ b/projects2/random/random.html
@@ -27,6 +27,10 @@
                     <label for="max">Max number:</label>
                         <input type="text" class="white-bottom-line" id="max">
                 </div>
+                <div class="row flex" style="align-items: center;">
+                    <label for="unique">Only unique numbers</label>
+                        <input type="checkbox" class="" id="unique">
+                </div>
             </div>
         </div>
         <button id="button" class="orange">GENERATE RANDOM NUMBER</button>        
