adding percent btn

--- a/projects2/calculator/calculator.html
+++ b/projects2/calculator/calculator.html
@@ -20,8 +20,11 @@
             </div>
             <table id="table">
                 <tr>  
-                    <td colspan="3">
+                    <td colspan="2">
                         <input type="button" id="clear" value="C">
+                    </td>
+                    <td>
+                        <input type="button" data-operation value="%">
                     </td>
                     <td class="hidden">
                         <input type="button" data-num class="gray" value="pi">
